--- a/src/Components/AdditionalComponents/GeneralButton.module.css
+++ b/src/Components/AdditionalComponents/GeneralButton.module.css
@@ -27,14 +27,39 @@
 .icn {
   margin-right: 0.2rem;
 }
-
+.notificationBall_2 {
+  padding: 0.5rem, 0.5rem;
+  font-size: 0.6rem;
+  background-color: rgb(252, 67, 67);
+  color: white;
+  border-radius: 1rem;
+  text-align: center;
+  padding-top: 0;
+  margin-right: 0;
+  display: inline;
+  position: absolute;
+  left: 70%;
+  top: 51%;
+}
+.btnParent {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
 /* Responsive styling from here. */
 @media only screen and (min-width: 280px) and (max-width: 576px) {
   .btn {
     border: none;
     height: 2.2rem;
-    width: 10rem;
+    width: 12rem;
     font-size: 0.8rem;
+  }
+  .notificationBall_2 {
+    left: 75%;
+    top: 50%;
+    padding: 0.15rem 0.15rem;
+    font-size: 0.5rem;
   }
 }
 
@@ -42,7 +67,7 @@
   .btn {
     border: none;
     height: 2.9rem;
-    width: 11rem;
+    width: 13rem;
     font-size: 0.9rem;
   }
 }
