--- a/src/Components/AdditionalComponents/InitialSlider.module.css
+++ b/src/Components/AdditionalComponents/InitialSlider.module.css
@@ -22,3 +22,7 @@
     opacity: 0.8;
   }
 }
+
+/* Responsive styling from here. */
+@media only screen and (min-width: 280px) and (max-width: 576px) {
+}
