--- a/src/Components/MinorComponents/EditForm.module.css
+++ b/src/Components/MinorComponents/EditForm.module.css
@@ -3,6 +3,7 @@
   padding: 2rem;
   border-radius: 1rem;
   margin-top: 1rem;
+  margin-bottom: 2rem;
   box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
     rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 }
@@ -13,29 +14,29 @@
   width: 30rem;
 }
 
-.form_main button {
-  width: 100%;
-  outline: none;
-  background-color: #1db954;
-  padding: 0.4rem;
-  font-size: 0.9rem;
-  color: white;
-  font-family: "poppins";
-  border: none;
-  cursor: pointer;
-  transition: 0.2s ease;
-  border-radius: 0.5rem;
-  margin-top: 0.4rem;
-}
-.form_main button:hover {
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 4px 6px -1px,
-    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
-}
-.form_main button:active {
-  background-color: #168f40;
-}
 .form_main label {
   color: #404040;
   font-family: "poppins";
   font-weight: 400;
+}
+/* Responsive styling from here. */
+@media only screen and (min-width: 280px) and (max-width: 576px) {
+  .form_main input {
+    padding: 0.3rem 0.3rem;
+    font-size: 0.8rem;
+    width: 12rem;
+  }
+  .form_main label {
+    font-size: 0.8rem;
+  }
+}
+@media only screen and (min-width: 577px) and (max-width: 720px) {
+  .form_main input {
+    padding: 0.4rem 0.4rem;
+    font-size: 0.9rem;
+    width: 20rem;
+  }
+  .form_main label {
+    font-size: 0.9rem;
+  }
 }
