--- a/src/Components/AdditionalComponents/DetailDebtNote.module.css
+++ b/src/Components/AdditionalComponents/DetailDebtNote.module.css
@@ -2,19 +2,34 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 80%;
+  width: 60%;
   border: 0.1rem solid rgb(221, 221, 221);
-  padding: 2rem;
+
+  padding: 0.5rem;
   border-radius: 1rem;
-  margin-top: 2rem;
   margin-bottom: 0.5rem;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
   color: #404040;
   font-size: 1.1rem;
   font-family: "poppins";
   margin: auto;
 }
-
+.btnContainer {
+  width: 60%;
+  border: 0.1rem solid rgb(221, 221, 221);
+  border-radius: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5rem;
+  margin: auto;
+  margin-top: 0.3rem;
+}
+.parentContainer {
+  border-radius: 1rem;
+  border: 0.1rem solid rgb(221, 221, 221);
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  padding: 2rem;
+}
 .row {
   height: 3rem;
   margin-top: 2rem;
@@ -31,18 +46,7 @@
   padding: 0.5rem 1rem;
   border-spacing: 3rem;
 }
-.btnContainer {
-  width: 84%;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-  border: 0.1rem solid rgb(221, 221, 221);
-  border-radius: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 1rem;
-  margin: auto;
-  margin-top: 0.3rem;
-}
+
 .btnContainer button {
   width: 11rem;
   height: 2rem;
