--- a/src/Components/AdditionalComponents/DetailDebtNote.module.css
+++ b/src/Components/AdditionalComponents/DetailDebtNote.module.css
@@ -18,6 +18,7 @@
   text-align: center;
   margin-bottom: 1rem;
   font-weight: 500;
+  text-decoration: underline;
 }
 .btnContainer {
   width: 80%;
