--- a/src/Components/AdditionalComponents/DetailDebtNote.module.css
+++ b/src/Components/AdditionalComponents/DetailDebtNote.module.css
@@ -13,6 +13,7 @@
   font-family: "poppins";
   margin: auto;
 }
+
 .noteTitle h3 {
   color: #404040;
   text-align: center;
@@ -37,6 +38,7 @@
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
   padding: 2rem;
   width: 100%;
+  margin-top: 2rem;
 }
 .row {
   height: 3rem;
