--- a/src/Components/TopLevel/DebtDetails.module.css
+++ b/src/Components/TopLevel/DebtDetails.module.css
@@ -34,7 +34,9 @@
 }
 
 .addBtn {
-  text-align: left;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   width: 80%;
   padding-bottom: 1rem;
   margin-top: 3rem;
