--- a/src/Components/AdditionalComponents/DetailDebtNote.module.css
+++ b/src/Components/AdditionalComponents/DetailDebtNote.module.css
@@ -100,14 +100,24 @@
 /* Responsive styling from here. */
 @media only screen and (min-width: 280px) and (max-width: 576px) {
   .infoContainer {
-    font-size: 0.7rem;
+    width: 80%;
+  }
+
+  .parentContainer {
+    padding: 0.5rem;
+    width: 99%;
+  }
+  .noteTitle h3 {
+    font-size: 0.8rem;
   }
   .row {
     height: 2rem;
-    margin-top: 0.5rem;
+    margin-top: 0.2rem;
   }
   .row td {
-    padding: 0.5rem 0.5rem;
+    font-size: 0.7rem;
+    margin-left: 0rem;
+    padding: 0.3rem 0.3rem;
   }
   .btnContainer button {
     width: 4rem;
@@ -119,6 +129,9 @@
   .btnContainer {
     padding: 0.5rem;
     justify-content: space-around;
+  }
+  .infoBox {
+    border-spacing: 0.3rem;
   }
 }
 @media only screen and (min-width: 577px) and (max-width: 720px) {
