--- a/src/Components/TopLevel/DebtDetails.module.css
+++ b/src/Components/TopLevel/DebtDetails.module.css
@@ -75,6 +75,10 @@
   .title {
     font-size: 0.8rem;
   }
+  .parentContainer {
+    width: 99%;
+    padding: 1rem;
+  }
 }
 @media only screen and (min-width: 577px) and (max-width: 720px) {
   .title {
