--- a/src/Components/AdditionalComponents/ListContainer.module.css
+++ b/src/Components/AdditionalComponents/ListContainer.module.css
@@ -61,6 +61,20 @@
   color: #191414;
 }
 
+.subTitle_one,
+.subTitle_two {
+  font-weight: 500;
+  font-size: 0.9rem;
+  margin-right: 0.3rem;
+  background-color: rgb(237, 237, 237);
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  border-radius: 0.4rem;
+}
+.subTitle_two {
+  border-radius: 0.3rem;
+  font-size: 0.8rem;
+}
 /* Responsive styling from here. */
 @media only screen and (min-width: 280px) and (max-width: 576px) {
   .listItem h4 {
