--- a/src/Components/AdditionalComponents/ListContainer.module.css
+++ b/src/Components/AdditionalComponents/ListContainer.module.css
@@ -67,9 +67,12 @@
   font-size: 0.9rem;
   margin-right: 0.3rem;
   background-color: rgb(237, 237, 237);
+  padding: 0;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
   border-radius: 0.4rem;
+  display: flex;
+  align-items: center;
 }
 .subTitle_two {
   border-radius: 0.3rem;
@@ -80,8 +83,23 @@
   .listItem h4 {
     margin: 0;
     font-size: 0.6rem;
+    margin-top: 0.2rem;
+  }
+  .subTitle_one,
+  .subTitle_two {
+    font-size: 0.7rem;
+    margin-right: 0.3rem;
+    padding-left: 0.3rem;
+    padding-right: 0.1rem;
+    border-radius: 0.4rem;
+    min-width: 3.4rem;
+    height: 1.5rem;
   }
 
+  .subTitle_two {
+    font-size: 0.6rem;
+    width: 3.4rem;
+  }
   .listItem h3 {
     margin: 0;
     font-size: 0.8rem;
@@ -95,13 +113,15 @@
     font-size: 0.6rem;
   }
   .listItem {
-    padding: 0.2rem 0.4rem;
-    height: 2.7rem;
+    padding: 0.4rem 0.4rem;
+    min-height: 3rem;
+    height: auto;
     margin: 0.5rem 0.5rem;
     border: 0.1rem solid rgb(221, 221, 221);
     justify-content: space-between;
   }
 }
+
 @media only screen and (min-width: 577px) and (max-width: 720px) {
   .listBtn {
     border-radius: 1.5rem;
