--- a/src/Components/SignupAndAuthentication/LoginPage.module.css
+++ b/src/Components/SignupAndAuthentication/LoginPage.module.css
@@ -40,7 +40,7 @@
 }
 .toggleText {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 .header {
   text-align: center;
