--- a/src/Components/SignupAndAuthentication/LoginPage.module.css
+++ b/src/Components/SignupAndAuthentication/LoginPage.module.css
@@ -42,6 +42,7 @@
   display: flex;
   justify-content: center;
 }
+
 .header {
   text-align: center;
 }
@@ -57,6 +58,10 @@
 }
 /* Responsive styling from here. */
 @media only screen and (min-width: 280px) and (max-width: 576px) {
+  .quickinImg {
+    height: 1.5rem;
+    margin-left: 0.5rem;
+  }
   .form_main input {
     width: 15rem;
     padding: 0.3rem 0.3rem;
