--- a/src/Components/AdditionalComponents/NoteRequestItem.module.css
+++ b/src/Components/AdditionalComponents/NoteRequestItem.module.css
@@ -5,12 +5,15 @@
   margin: auto;
   display: flex;
   align-items: center;
-  height: 5rem;
+  height: 4rem;
   margin-bottom: 0.5rem;
   margin-top: 0.5rem;
 }
 .info_left {
   width: 70%;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+
   padding-left: 2rem;
 }
 .liBox h4,
