--- a/src/Components/AdditionalComponents/NoteRequestItem.module.css
+++ b/src/Components/AdditionalComponents/NoteRequestItem.module.css
@@ -31,4 +31,14 @@ h3 {
 .btn {
   border: none;
   outline: none;
+  border-radius: 0.3rem;
+  color: white;
+  padding: 0.6rem 2rem;
+  margin: 0rem 0.5rem;
+}
+.rejectbtn {
+  background-color: rgb(241, 51, 51);
+}
+.acceptbtn {
+  background-color: #1db954;
 }
