--- a/src/Components/AdditionalComponents/NoteRequestItem.module.css
+++ b/src/Components/AdditionalComponents/NoteRequestItem.module.css
@@ -35,9 +35,16 @@ h3 {
   color: white;
   padding: 0.6rem 2rem;
   margin: 0rem 0.5rem;
+  cursor: pointer;
 }
 .rejectbtn {
   background-color: rgb(241, 51, 51);
+}
+.rejectbtn:active {
+  background-color: rgb(182, 28, 28);
+}
+.acceptbtn:active {
+  background-color: #137a37;
 }
 .acceptbtn {
   background-color: #1db954;
