--- a/src/Components/AdditionalComponents/BasicCoverDiv.module.css
+++ b/src/Components/AdditionalComponents/BasicCoverDiv.module.css
@@ -1,6 +1,6 @@
 .mainGrid {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   background-color: rgb(255, 255, 255);
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
   border-radius: 1rem;
