--- a/src/Components/UserUIComponents/NoteRequestPage.module.css
+++ b/src/Components/UserUIComponents/NoteRequestPage.module.css
@@ -1,1 +1,10 @@
+.innerCover {
+  width: 100%;
+  height: 60vh;
+  max-height: 60vh;
+  overflow-y: scroll;
+}
 
+.innerCover::-webkit-scrollbar {
+  display: none;
+}
