--- a/src/Components/AdditionalComponents/NoteRequestItem.module.css
+++ b/src/Components/AdditionalComponents/NoteRequestItem.module.css
@@ -59,3 +59,30 @@ h3 {
   margin-left: 0.2rem;
   transform: scale(0.8);
 }
+
+/* Responsive styling from here. */
+@media only screen and (min-width: 280px) and (max-width: 576px) {
+  .info_left {
+    width: 50%;
+  }
+
+  .info_right {
+    width: 50%;
+  }
+  .liBox h4 {
+    font-size: 0.7rem;
+  }
+  .liBox h3 {
+    font-size: 0.8rem;
+  }
+  .btn {
+    width: 4.5rem;
+    padding: 0.2rem 0.5rem;
+    margin: 0rem 0.2rem;
+    font-size: 0.7rem;
+  }
+  .btn_icn {
+    margin-left: 0rem;
+    transform: scale(0.5);
+  }
+}
