--- a/src/Components/AdditionalComponents/NoteRequestItem.module.css
+++ b/src/Components/AdditionalComponents/NoteRequestItem.module.css
@@ -69,7 +69,7 @@ h3 {
     flex-wrap: wrap;
     padding: 0rem;
     text-align: center;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
   }
   .liBox {
     padding: 0.2rem 0rem;
@@ -87,16 +87,16 @@ h3 {
     padding-right: 0;
   }
   .liBox h4 {
-    font-size: 0.7rem;
+    font-size: 0.8rem;
     width: 100%;
   }
   .liBox h3 {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     width: 100%;
   }
   .btn {
     justify-content: center;
-    width: 6rem;
+    width: 40%;
     padding: 0.2rem 0.5rem;
     margin: 0rem 0.2rem;
     margin-bottom: 0.5rem;
