--- a/src/Components/AdditionalComponents/NoteRequestItem.module.css
+++ b/src/Components/AdditionalComponents/NoteRequestItem.module.css
@@ -107,3 +107,13 @@ h3 {
     transform: scale(0.5);
   }
 }
+@media only screen and (min-width: 500px) and (max-width: 576px) {
+  .btn {
+    justify-content: center;
+    width: 39%;
+    padding: 0.2rem 0.5rem;
+    margin: 0rem 0.2rem;
+    margin-bottom: 0.5rem;
+    font-size: 0.7rem;
+  }
+}
