--- a/src/Components/AdditionalComponents/NoteRequestItem.module.css
+++ b/src/Components/AdditionalComponents/NoteRequestItem.module.css
@@ -117,3 +117,30 @@ h3 {
     font-size: 0.7rem;
   }
 }
+@media only screen and (min-width: 577px) and (max-width: 720px) {
+  .btn {
+    width: 50%;
+    text-align: center;
+    font-size: 0.8rem;
+    padding: 0.4rem 1rem;
+    margin: 0rem 0.2rem;
+
+    justify-content: center;
+  }
+  .btn_icn {
+    margin-left: 0rem;
+    transform: scale(0.6);
+  }
+  .info_left {
+    width: 50%;
+  }
+  .info_right {
+    width: 50%;
+  }
+  .liBox h4 {
+    font-size: 0.9rem;
+  }
+  .liBox h3 {
+    font-size: 1rem;
+  }
+}
