--- a/src/Components/AdditionalComponents/NoteRequestItem.module.css
+++ b/src/Components/AdditionalComponents/NoteRequestItem.module.css
@@ -10,7 +10,7 @@
   margin-top: 0.5rem;
 }
 .info_left {
-  width: 70%;
+  width: 50%;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 
@@ -24,7 +24,7 @@ h3 {
 }
 
 .info_right {
-  width: 30%;
+  width: 50%;
   text-align: right;
   padding-right: 1rem;
   display: flex;
@@ -34,7 +34,7 @@ h3 {
   outline: none;
   border-radius: 0.3rem;
   color: white;
-  width: 10rem;
+  width: 45%;
   padding: 0.3rem 2rem;
   margin: 0rem 0.5rem;
   cursor: pointer;
@@ -117,7 +117,36 @@ h3 {
     font-size: 0.7rem;
   }
 }
+
 @media only screen and (min-width: 577px) and (max-width: 720px) {
+  .btn {
+    width: 50%;
+    text-align: center;
+    font-size: 0.8rem;
+    padding: 0.4rem 1rem;
+    margin: 0rem 0.2rem;
+
+    justify-content: center;
+  }
+  .btn_icn {
+    margin-left: 0rem;
+    transform: scale(0.6);
+  }
+  .info_left {
+    width: 50%;
+  }
+  .info_right {
+    width: 50%;
+  }
+  .liBox h4 {
+    font-size: 0.9rem;
+  }
+  .liBox h3 {
+    font-size: 1rem;
+  }
+}
+
+@media only screen and (min-width: 720px) and (max-width: 992px) {
   .btn {
     width: 50%;
     text-align: center;
