--- a/src/Components/UserUIComponents/MainContainer.module.css
+++ b/src/Components/UserUIComponents/MainContainer.module.css
@@ -68,6 +68,9 @@
   .header h1 {
     font-size: 1.5rem;
   }
+  .bannerGrid_Outer {
+    width: 80%;
+  }
   .innerBox {
     border: 0.1rem solid rgb(211, 211, 211);
     width: 70%;
