--- a/src/Components/AdditionalComponents/DigitalBanner_forShop.module.css
+++ b/src/Components/AdditionalComponents/DigitalBanner_forShop.module.css
@@ -7,7 +7,6 @@
   width: 100%;
   border-radius: 0.5rem;
   background-color: #1db954;
-  border: 0.1rem solid #1db954;
   color: white;
   padding-top: 0.5rem;
   text-align: center;
@@ -34,10 +33,19 @@
 }
 .addressCover {
   background-color: black;
-  width: 100%;
-  height: 3rem;
+  height: 5rem;
   padding-top: 0.5rem;
-  border-radius: 0.1rem;
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+}
+.trending {
+  display: flex;
+  margin-top: 0.6rem;
+  font-weight: 600;
+  justify-content: center;
+  align-items: center;
+  color: rgb(243, 88, 32);
+  font-size: 1.1rem;
 }
 /* Responsive styling from here. */
 @media only screen and (min-width: 280px) and (max-width: 576px) {
