--- a/src/Components/MinorComponents/Mini_TScoreIndicator.module.css
+++ b/src/Components/MinorComponents/Mini_TScoreIndicator.module.css
@@ -1,3 +1,6 @@
+* {
+  padding: 0;
+}
 .bar {
   height: auto;
   width: 100%;
@@ -8,9 +11,16 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  font-size: 0.9rem;
-  padding-bottom: 1rem;
+  font-size: 0.8rem;
+  padding-bottom: 0.5rem;
+  padding-top: 0.3rem;
   background-color: rgb(30, 30, 30);
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
     rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+}
+.bar p {
+  color: #1db954;
+}
+.scorePart {
+  display: flex;
 }
