--- a/src/Components/UserUIComponents/MCScorePage.module.css
+++ b/src/Components/UserUIComponents/MCScorePage.module.css
@@ -43,3 +43,8 @@
   margin-bottom: 2rem;
   margin-top: 2rem;
 }
+.infos {
+  margin-top: 1rem;
+  border-top: 0.1rem solid rgb(211, 211, 211);
+  padding-top: 1rem;
+}
