--- a/src/Components/UserUIComponents/MCScorePage.module.css
+++ b/src/Components/UserUIComponents/MCScorePage.module.css
@@ -42,6 +42,7 @@
 .childBox_three {
   margin-bottom: 2rem;
   margin-top: 2rem;
+  border-top: 0.1rem solid rgb(211, 211, 211);
 }
 .infos {
   margin-top: 1rem;
