--- a/src/Components/AdditionalComponents/UserLevelBar.module.css
+++ b/src/Components/AdditionalComponents/UserLevelBar.module.css
@@ -73,3 +73,13 @@
     font-size: 0.6rem;
   }
 }
+@media only screen and (min-width: 577px) and (max-width: 720px) {
+  .heading {
+    font-size: 0.7rem;
+    padding: 0.2rem;
+  }
+  .inner_bar {
+    height: 1.5rem;
+    font-size: 0.7rem;
+  }
+}
