--- a/src/Components/UserUIComponents/MCScorePage.module.css
+++ b/src/Components/UserUIComponents/MCScorePage.module.css
@@ -26,6 +26,10 @@
   align-items: center;
   justify-content: center;
 }
+.scoreNum h2 {
+  border-bottom: 0.2rem solid rgb(39, 39, 39);
+  border-radius: 0.3rem;
+}
 .subTitle {
   margin-top: 2rem;
 }
@@ -53,7 +57,7 @@
 /* Responsive styling from here. */
 @media only screen and (min-width: 280px) and (max-width: 576px) {
   .parentBox {
-    width: 90%;
+    width: 80%;
   }
   .scoreNum {
     width: 50%;
@@ -65,13 +69,53 @@
   }
 
   .childBox_two {
-    width: 90%;
+    width: 70%;
   }
 
   .infos {
-    margin-top: 1rem;
-    border-top: 0.1rem solid rgb(211, 211, 211);
-    padding-top: 1rem;
+    font-size: 0.8rem;
+  }
+}
+@media only screen and (min-width: 577px) and (max-width: 720px) {
+  .parentBox {
+    width: 80%;
+  }
+  .scoreNum {
+    width: 50%;
+    height: 8rem;
+    font-size: 1.5rem;
+  }
+  .subTitle {
+    font-size: 0.9rem;
+  }
+
+  .childBox_two {
+    width: 70%;
+  }
+
+  .infos {
+    font-size: 0.8rem;
+  }
+}
+
+@media only screen and (min-width: 721px) and (max-width: 1080px) {
+  .parentBox {
+    width: 80%;
+  }
+  .scoreNum {
+    width: 50%;
+    height: 8rem;
+    font-size: 2.2rem;
+  }
+  .subTitle {
+    font-size: 0.9rem;
+  }
+
+  .childBox_two {
+    width: 70%;
+  }
+
+  .infos {
     font-size: 0.8rem;
   }
 }
