--- a/src/Components/Administrator/Administrator.module.css
+++ b/src/Components/Administrator/Administrator.module.css
@@ -6,9 +6,12 @@
   margin-top: 2rem;
 }
 .action_section {
-  margin-top: 1.5rem;
-  border: 0.1rem solid rgb(211, 211, 211);
+  margin-top: 2rem;
+  border: 0.1rem solid rgb(232, 232, 232);
   padding: 1.5rem;
+  background-color: rgb(250, 250, 250);
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+
   border-radius: 0.5rem;
 }
 .singleActions {
@@ -21,8 +24,10 @@
   border: none;
   outline: none;
   font-size: 1rem;
-  width: 8rem;
-  height: 1.5rem;
+  width: 9rem;
+  height: 2.3rem;
   color: white;
   background-color: #1db954;
+  border-radius: 0.5rem;
+  font-family: "poppins";
 }
