--- a/src/Components/Administrator/Administrator.module.css
+++ b/src/Components/Administrator/Administrator.module.css
@@ -7,11 +7,11 @@
 }
 .action_section {
   margin-top: 2rem;
+  margin-bottom: 2rem;
   border: 0.1rem solid rgb(232, 232, 232);
   padding: 1.5rem;
   background-color: rgb(250, 250, 250);
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-
   border-radius: 0.5rem;
 }
 .singleActions {
