--- a/src/Components/Administrator/Administrator.module.css
+++ b/src/Components/Administrator/Administrator.module.css
@@ -65,6 +65,13 @@
 }
 /* Responsive styling from here. */
 @media only screen and (min-width: 280px) and (max-width: 576px) {
+  .heading h3 {
+    font-size: 1rem;
+  }
+  .heading p {
+    font-size: 0.8rem;
+    margin-top: 1rem;
+  }
   .parentBox {
     width: 90%;
   }
@@ -98,5 +105,114 @@
     padding: 0.4rem;
     border-radius: 0.2rem;
     font-size: 0.7rem;
+  }
+}
+
+@media only screen and (min-width: 577px) and (max-width: 720px) {
+  .parentBox {
+    width: 90%;
+  }
+  .btn_cls {
+    font-size: 0.8rem;
+    width: 33.3vw;
+    height: 2.3rem;
+    margin: 0.2rem;
+  }
+  .action_section {
+    padding: 0.5rem;
+  }
+  .frm input {
+    height: 2.3rem;
+    padding: 0.5rem;
+    width: 100vw;
+    font-size: 0.8rem;
+  }
+  .searchActions {
+    padding: 0.5rem;
+  }
+  .frm {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .btn_submit {
+    width: 100%;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    padding: 0.4rem;
+    border-radius: 0.2rem;
+    font-size: 0.8rem;
+  }
+}
+@media only screen and (min-width: 721px) and (max-width: 1080px) {
+  .parentBox {
+    width: 90%;
+  }
+  .btn_cls {
+    font-size: 0.8rem;
+    width: 33.3vw;
+    height: 2.3rem;
+    margin: 0.2rem;
+  }
+  .action_section {
+    padding: 0.5rem;
+  }
+  .frm input {
+    height: 2.3rem;
+    padding: 0.5rem;
+    width: 100vw;
+    font-size: 0.8rem;
+  }
+  .searchActions {
+    padding: 0.5rem;
+  }
+  .frm {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .btn_submit {
+    width: 100%;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    padding: 0.4rem;
+    border-radius: 0.2rem;
+    font-size: 0.8rem;
+  }
+}
+@media only screen and (min-width: 1080px) and (max-width: 1300px) {
+  .parentBox {
+    width: 90%;
+  }
+  .btn_cls {
+    font-size: 0.8rem;
+    width: 33.3vw;
+    height: 2.3rem;
+    margin: 0.2rem;
+  }
+  .action_section {
+    padding: 0.5rem;
+  }
+  .frm input {
+    height: 2.3rem;
+    padding: 0.5rem;
+    width: 100vw;
+    font-size: 0.8rem;
+  }
+  .searchActions {
+    padding: 0.5rem;
+  }
+  .frm {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .btn_submit {
+    width: 100%;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    padding: 0.4rem;
+    border-radius: 0.2rem;
+    font-size: 0.8rem;
   }
 }
