--- a/src/Components/AdditionalComponents/GeneralButton.module.css
+++ b/src/Components/AdditionalComponents/GeneralButton.module.css
@@ -8,11 +8,14 @@
   font-family: "poppins";
   display: flex;
   justify-content: center;
+  border-left: 0rem;
+  border-right: 0rem;
   align-items: center;
   background-color: transparent;
   border: 0.1rem solid rgb(211, 211, 211);
   border-radius: 0.3rem;
   color: #2a2a2a;
+  background-color: #1db954;
   /* box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, */
   /* rgba(0, 0, 0, 0.06) 0px 2px 4px -1px; */
   transition: 0.2s ease;
@@ -24,7 +27,6 @@
 
 .icn {
   margin-right: 0.2rem;
-  color: #1db954;
 }
 .notificationBall_2 {
   padding: 0.5rem, 0.5rem;
