--- a/src/Components/AdditionalComponents/GeneralButton.module.css
+++ b/src/Components/AdditionalComponents/GeneralButton.module.css
@@ -1,6 +1,6 @@
 .btn {
   border: none;
-  width: 13rem;
+  width: 100%;
   height: 2.8rem;
   margin: auto;
   margin-top: 0.5rem;
@@ -12,10 +12,11 @@
   border-right: 0rem;
   align-items: center;
   background-color: transparent;
-  border: 0.1rem solid rgb(211, 211, 211);
-  border-radius: 0.3rem;
+  /* border: 0.1rem solid rgb(211, 211, 211); */
+  /* border-radius: 0.3rem; */
   color: #2a2a2a;
-  background-color: #1db954;
+  border-bottom: 0.1rem solid rgb(211, 211, 211);
+  /* background-color: #1db954; */
   /* box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, */
   /* rgba(0, 0, 0, 0.06) 0px 2px 4px -1px; */
   transition: 0.2s ease;
