--- a/src/Components/AdditionalComponents/GeneralButton.module.css
+++ b/src/Components/AdditionalComponents/GeneralButton.module.css
@@ -1,6 +1,7 @@
 .btn {
   border: none;
   width: 100%;
+  min-width: 10rem;
   height: 2.8rem;
   margin: auto;
   margin-top: 0.5rem;
@@ -15,8 +16,8 @@
   /* border: 0.1rem solid rgb(211, 211, 211); */
   /* border-radius: 0.3rem; */
   color: #2a2a2a;
-  border-bottom: 0.1rem solid rgb(211, 211, 211);
-  /* background-color: #1db954; */
+  /* border-bottom: 0.1rem solid rgb(211, 211, 211); */
+  background-color: #efefef;
   /* box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, */
   /* rgba(0, 0, 0, 0.06) 0px 2px 4px -1px; */
   transition: 0.2s ease;
