--- a/src/Components/TopLevel/DebtDetails.module.css
+++ b/src/Components/TopLevel/DebtDetails.module.css
@@ -70,6 +70,16 @@
 .addBtn button:active {
   background-color: #137a37;
 }
+.infoNote {
+  color: black;
+  background-color: rgb(239, 239, 239);
+  border-radius: 0.3rem;
+  padding: 1rem 0.2rem;
+  margin-bottom: 1rem;
+  text-align: center;
+  font-family: "poppins";
+  font-size: 0.9rem;
+}
 /* Responsive styling from here. */
 @media only screen and (min-width: 280px) and (max-width: 576px) {
   .title {
