--- a/src/Components/TopLevel/DebtDetails.module.css
+++ b/src/Components/TopLevel/DebtDetails.module.css
@@ -71,7 +71,7 @@
   background-color: #137a37;
 }
 .infoNote {
-  color: black;
+  color: rgb(0, 0, 0);
   background-color: rgb(239, 239, 239);
   border-radius: 0.3rem;
   padding: 1rem 0.2rem;
@@ -88,6 +88,9 @@
   .parentContainer {
     width: 99%;
     padding: 1rem;
+  }
+  .infoNote {
+    font-size: 0.5rem;
   }
   .addBtn {
     margin: 0;
@@ -119,6 +122,9 @@
     font-size: 0.9rem;
     width: 9rem;
   }
+  .infoNote {
+    font-size: 0.7rem;
+  }
 }
 @media only screen and (min-width: 721px) and (max-width: 992px) {
   .title {
@@ -130,5 +136,8 @@
   .addBtn {
     margin: 0;
     width: 100%;
+  }
+  .infoNote {
+    font-size: 0.8rem;
   }
 }
