--- a/src/Components/TopLevel/DebtNotesContainer.module.css
+++ b/src/Components/TopLevel/DebtNotesContainer.module.css
@@ -63,6 +63,9 @@ a {
   background-color: rgb(170, 170, 170);
 }
 
+.faceIcn {
+  transform: scale(1.3);
+}
 /* Responsive styling from here. */
 @media only screen and (min-width: 280px) and (max-width: 576px) {
   .headingPart h3 {
